--- a/package.json
+++ b/package.json
@@ -24,19 +24,18 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.1.12",
     "@types/jest": "^23.3.0",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.4",
     "@types/react-router-dom": "^4.3.0",
-    "@types/redux-thunk": "^2.1.0",
     "@types/sinon": "^5.0.1",
-    "autoprefixer": "^9.0.0",
+    "babel-jest": "^23.4.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -50,7 +49,6 @@
     "jest": "^23.4.1",
     "jest-junit": "^5.1.0",
     "jsdom": "^11.11.0",
-    "postcss-loader": "^2.1.6",
     "sinon": "^6.1.4",
     "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
