--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.1.12",
     "@types/jest": "^23.3.0",
+    "@types/moxios": "^0.4.8",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.4",
@@ -51,6 +52,7 @@
     "jest": "^23.4.1",
     "jest-junit": "^5.1.0",
     "jsdom": "^11.11.0",
+    "moxios": "^0.4.0",
     "sinon": "^6.1.4",
     "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
